# kterminal

./: CMakeLists.txt  README.md  TODO.md  application.cpp  cscope.out  install.sh  kterminal.desktop  kterminal.kdev4  main.cpp  mainwindow.cpp  mainwindow.h  my_lib.cpp  run.sh  session.cpp  session.h  sessionstack.cpp  sessionstack.h  splitter.cpp  splitter.h  terminal.cpp  terminal.h  visualeventoverlay.cpp  window.cpp  window.h
.kdev4/: kterminal.kdev4
headers/: application.h  my_lib.h
